# whatlang-pyo3

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  test.py  whatlang.pyi
.github/workflows/: CI.yml
src/: lib.rs  tests.rs  utils.rs
