[package]
name = "whatlang-pyo3"
version = "0.5.0"
edition = "2021"
authors = ["Omar MHAIMDAT"]
description = "Python bindings for whatlang using pyo3"
license = "MIT"
repository = "https://github.com/omarmhaimdat/whatlang-pyo3"
readme = "README.md"
keywords = [
    "whatlang",
    "pyo3",
    "python",
    "bindings",
    "natural language",
    "language detection",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "whatlang"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
whatlang = "0.16.1"
rayon = "1.5.1"
num_cpus = "1.13.0"
indicatif = "0.17.3"
