[build-system]
requires = ["maturin>=0.12,<0.15"]
build-backend = "maturin"

[project]
name = "whatlang-pyo3"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

authors = [{ name = "Omar MHAIMDAT", email = "omarmhaidmat@gmail.com" }]

[project.scripts]
detect = "whatlang:detect"
detect_lang = "whatlang:detect_lang"
detect_script = "whatlang:detect_script"

[project.gui-scripts]
detect = "whatlang:detect"
detect_lang = "whatlang:detect_lang"
detect_script = "whatlang:detect_script"
